--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
+    "@prisma/client": "^6.7.0",
     "dotenv": "^16.5.0",
     "hono": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.7.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
