--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@neondatabase/serverless": "^1.0.0",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "hono": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
