--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
     "finance-common": "^1.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1"
+    "react-hook-form": "^7.56.4",
+    "react-router-dom": "^7.6.1",
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
