--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
+    "recharts": "^2.15.3",
     "zod": "^3.25.32"
   },
   "devDependencies": {
