--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.3",
     "zod": "^3.25.32"
   },
   "devDependencies": {
